第二次交作業前

--- a/3/Makefile
+++ b/3/Makefile
@@ -24,4 +24,5 @@ sync:
 	scp scanner.l lmchen@140.113.89.3:~/CP/
 	scp symtbl.h lmchen@140.113.89.3:~/CP/
 	scp symtbl.c lmchen@140.113.89.3:~/CP/
+	scp Makefile lmchen@140.113.89.3:~/CP/
     
